@@ -64,11 +64,11 @@ public class InmateRepositoryTest {
     @Test
     public void testFindSpecificInmatesAtLocation() {
         final var pageRequest = new PageRequest("lastName, firstName");
-        final var caseloads = new HashSet<String>(Arrays.asList("LEI"));
+        final var caseloads = Set.of("LEI");
         final var foundInmates = repository.findAllInmates(caseloads, "WING", "", pageRequest);
 
         assertThat(foundInmates.getItems()).isNotEmpty();
-        assertThat(foundInmates.getItems()).extracting("lastName").contains("FOX","DUCK","BATES");
+        assertThat(foundInmates.getItems()).extracting(OffenderBooking::getLastName).contains("FOX","DUCK","BATES");
     }
 
     @Test
